tests/fail/semantic/no-multiple-declaration-1.tiger
let
      var x : int := 1
      var x : int := 2
in
end
